syntax = "proto3";

package todo;

option go_package = "todo-list-app/internal/grpc/v1;v1";

import "third_party/google/api/annotations.proto";

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  bool isDone = 4;
}

service TodoService {
  rpc GetTodos (GetTodosRequest) returns (GetTodosReply) {
    option (google.api.http) = {
      get: "/todos"
    };
  };

  rpc GetTodo (TodoRequest) returns (GetTodoReply) {
    option (google.api.http) = {
      get: "/todos/{id}"
    };
  };

  rpc AddTodo (AddTodoRequest) returns (DefaultReply) {};
  rpc SetDoneTodo (TodoRequest) returns (DefaultReply) {};
  rpc DeleteTodo (TodoRequest) returns (DefaultReply) {};
}

message GetTodosRequest {
  string isDone = 1;
}

message GetTodosReply {
  repeated Todo todos = 1;
}

message TodoRequest {
  string id = 1;
}

message GetTodoReply {
  Todo todo = 1;
}

message AddTodoRequest {
  string title = 1;
  string description = 2;
}

message DefaultReply {
  string message = 1;
}
